--- a/dev-nodejs/07-restserver/public/index.html
+++ b/dev-nodejs/07-restserver/public/index.html
@@ -30,7 +30,7 @@
           console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
 
           var id_token = googleUser.getAuthResponse().id_token;
-          //console.log("onSignIn:id_token: "+id_token)
+          console.log("onSignIn:id_token: "+id_token)
 
           var xhr = new XMLHttpRequest();
           xhr.open('POST', '/google');
